--- a/polyhedra.html
+++ b/polyhedra.html
@@ -214,7 +214,7 @@
             gl.uniformMatrix4fv(_Mmatrix, false, mo_matrix);
 
             gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, index_buffer);
-            gl.drawElements(gl.TRIANGLES, indices.length, gl.UNSIGNED_SHORT, 0);
+            gl.drawElements(gl.TRIANGLES, cube_indices.length, gl.UNSIGNED_SHORT, 0);
 
             window.requestAnimationFrame(animate);
          }
